updates to changelog

--- a/changelog.html
+++ b/changelog.html
@@ -19,6 +19,60 @@
             <p class="text-center text-gray-600 dark:text-gray-300 mb-12">All notable changes to the Noundry platform</p>
             
             <div class="space-y-8">
+                <div class="bg-white dark:bg-gray-800 rounded-xl p-8 border-l-4 border-green-600">
+                    <div class="flex items-center justify-between mb-4">
+                        <h2 class="text-2xl font-bold text-gray-900 dark:text-white">v0.6.0</h2>
+                        <span class="text-sm text-gray-600 dark:text-gray-400">2025-10-15</span>
+                    </div>
+                    <div class="space-y-4">
+                        <div>
+                            <h3 class="font-semibold text-green-600 dark:text-green-400 mb-2">✨ Added</h3>
+                            <ul class="list-disc list-inside space-y-1 text-gray-700 dark:text-gray-300">
+                                <li><strong>Master Documentation Repository</strong> - Comprehensive platform documentation with 10+ markdown files covering all Noundry components</li>
+                                <li><strong>Noundry.UI v1.0.2</strong> - Advanced Data Table component with API integration, server/client pagination, and multi-column sorting</li>
+                                <li><strong>Noundry.UI v1.0.1</strong> - Multi-Select component with tag display, API integration, and color themes</li>
+                                <li><strong>Noundry.TagHelpers v1.1.0</strong> - AutoHide TagHelper with automatic element hiding and animation effects</li>
+                                <li><strong>Noundry.Tuxedo.Bowtie</strong> - Production-ready database migration library with multi-RDBMS support (SQL Server, PostgreSQL, MySQL, SQLite)</li>
+                                <li><strong>Noundry Engine</strong> - Docker deployment platform with GitHub integration, zero-downtime deployments, and real-time logs</li>
+                                <li>Platform overview page with architecture diagrams and component relationships</li>
+                                <li>Multiple quick start guides for Web Dev, API Dev, Testing, and DevOps paths</li>
+                                <li>Complete web application integration guide with 7+ components working together</li>
+                                <li>Ecosystem dropdown menu on all pages with Engine, Logably, and Authnz services</li>
+                                <li>Status page monitoring for Engine UI/API, Logably UI/API, and Authnz UI/API</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h3 class="font-semibold text-blue-600 dark:text-blue-400 mb-2">🔄 Changed</h3>
+                            <ul class="list-disc list-inside space-y-1 text-gray-700 dark:text-gray-300">
+                                <li>Updated all engine.noundry.com links to point to engine.html (coming soon page)</li>
+                                <li>Enhanced engine.html with comprehensive feature descriptions and technology stack details</li>
+                                <li>Standardized navigation headers across all pages with consistent Ecosystem dropdown placement</li>
+                                <li>Updated documentation structure with component-specific guides and real-world examples</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h3 class="font-semibold text-orange-600 dark:text-orange-400 mb-2">🔧 Improved</h3>
+                            <ul class="list-disc list-inside space-y-1 text-gray-700 dark:text-gray-300">
+                                <li>Enhanced UI component library with 56 total components (was 54)</li>
+                                <li>Improved TagHelpers library with 25 passing tests across .NET 6, 8, and 9</li>
+                                <li>Bowtie migration tool with 16/18 unit tests passing (89% success rate)</li>
+                                <li>Complete documentation coverage with 15,000+ words and 50+ code examples</li>
+                                <li>Better developer experience with IntelliSense support and comprehensive API documentation</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h3 class="font-semibold text-purple-600 dark:text-purple-400 mb-2">📚 Documentation</h3>
+                            <ul class="list-disc list-inside space-y-1 text-gray-700 dark:text-gray-300">
+                                <li>Added Getting Started guide with multiple installation scenarios</li>
+                                <li>Added Web Application Guide with complete e-commerce example</li>
+                                <li>Added component-specific documentation for Assertive, Guardian, DotEnvX, TagHelpers, UI, Tuxedo, and Bowtie</li>
+                                <li>Added MSBuild integration guides and CI/CD examples</li>
+                                <li>Added contribution guidelines and repository structure documentation</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="bg-white dark:bg-gray-800 rounded-xl p-8 border-l-4 border-purple-600">
                     <div class="flex items-center justify-between mb-4">
                         <h2 class="text-2xl font-bold text-gray-900 dark:text-white">v0.5.0</h2>
