--- a/index.html
+++ b/index.html
@@ -1298,6 +1298,132 @@
                     </div>
                 </div>
             </div>
+
+            <!-- NoundryMCP Section -->
+            <div class="mt-20 bg-gradient-to-r from-purple-50 to-pink-50 dark:from-gray-800 dark:to-gray-700 rounded-2xl p-12">
+                <div class="text-center mb-12">
+                    <div class="inline-flex items-center justify-center w-16 h-16 bg-purple-100 dark:bg-purple-900 rounded-full mb-6">
+                        <svg class="w-8 h-8 text-purple-600 dark:text-purple-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 3v2m6-2v2M9 19v2m6-2v2M5 9H3m2 6H3m18-6h-2m2 6h-2M7 19h10a2 2 0 002-2V7a2 2 0 00-2-2H7a2 2 0 00-2 2v10a2 2 0 002 2zM9 9h6v6H9V9z"></path>
+                        </svg>
+                    </div>
+                    <h3 class="text-3xl font-bold text-gray-900 dark:text-white mb-4">NoundryMCP - Model Context Protocol Server</h3>
+                    <p class="text-lg text-gray-600 dark:text-gray-300 max-w-3xl mx-auto">
+                        Integrate Noundry platform directly into Claude Desktop via MCP. Get instant access to templates, documentation, and code generation right from your AI assistant.
+                    </p>
+                </div>
+
+                <div class="grid lg:grid-cols-2 gap-8 items-start">
+                    <!-- Features List -->
+                    <div class="space-y-6">
+                        <div class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-lg">
+                            <h4 class="text-xl font-semibold text-gray-900 dark:text-white mb-4 flex items-center">
+                                <svg class="w-6 h-6 text-purple-500 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path>
+                                </svg>
+                                Template & Documentation Access
+                            </h4>
+                            <p class="text-gray-600 dark:text-gray-300">Browse and search all Noundry templates, libraries, and documentation directly from Claude. Get instant code examples and setup instructions.</p>
+                        </div>
+
+                        <div class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-lg">
+                            <h4 class="text-xl font-semibold text-gray-900 dark:text-white mb-4 flex items-center">
+                                <svg class="w-6 h-6 text-purple-500 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"></path>
+                                </svg>
+                                AI-Powered Code Generation
+                            </h4>
+                            <p class="text-gray-600 dark:text-gray-300">Ask Claude to generate Noundry-specific code using platform templates. Create controllers, services, Razor pages, and more with context-aware suggestions.</p>
+                        </div>
+
+                        <div class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-lg">
+                            <h4 class="text-xl font-semibold text-gray-900 dark:text-white mb-4 flex items-center">
+                                <svg class="w-6 h-6 text-purple-500 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
+                                </svg>
+                                Hosted Service - No Local Setup
+                            </h4>
+                            <p class="text-gray-600 dark:text-gray-300">NoundryMCP is a hosted service accessible via Claude Desktop. No local installation or configuration required - just connect and start building.</p>
+                        </div>
+                    </div>
+
+                    <!-- Claude Samples -->
+                    <div class="space-y-6">
+                        <div class="bg-gray-900 dark:bg-black rounded-xl shadow-2xl border border-gray-700 overflow-hidden">
+                            <div class="flex items-center px-4 py-3 bg-gray-800 dark:bg-gray-900 border-b border-gray-700">
+                                <div class="flex space-x-2">
+                                    <div class="w-3 h-3 bg-red-500 rounded-full"></div>
+                                    <div class="w-3 h-3 bg-yellow-500 rounded-full"></div>
+                                    <div class="w-3 h-3 bg-green-500 rounded-full"></div>
+                                </div>
+                                <div class="ml-4 text-gray-400 text-xs font-mono">Claude Desktop with NoundryMCP</div>
+                            </div>
+                            <div class="p-6 space-y-4 font-mono text-sm">
+                                <div>
+                                    <div class="text-blue-400 mb-2">You:</div>
+                                    <div class="text-gray-300 bg-gray-800 p-3 rounded">"Show me Noundry templates for web applications"</div>
+                                </div>
+                                <div>
+                                    <div class="text-green-400 mb-2">Claude:</div>
+                                    <div class="text-gray-300 bg-gray-800 p-3 rounded text-xs">
+                                        <div class="text-green-400">✓ Noundry.Templates.WebApp</div>
+                                        <div class="text-gray-400 ml-4">Full-stack ASP.NET Core web app</div>
+                                        <div class="text-gray-400 ml-4">with Razor Pages, Noundry.UI, Auth</div>
+                                        <div class="text-green-400 mt-2">✓ Noundry.Templates.Api</div>
+                                        <div class="text-gray-400 ml-4">REST API with Noundry.Tuxedo ORM</div>
+                                        <div class="text-gray-400 ml-4">authentication, and Swagger</div>
+                                        <div class="text-green-400 mt-2">✓ Noundry.Templates.Blazor</div>
+                                        <div class="text-gray-400 ml-4">Blazor WebAssembly with</div>
+                                        <div class="text-gray-400 ml-4">Noundry.Blazor UI components</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="bg-gray-900 dark:bg-black rounded-xl shadow-2xl border border-gray-700 overflow-hidden">
+                            <div class="flex items-center px-4 py-3 bg-gray-800 dark:bg-gray-900 border-b border-gray-700">
+                                <div class="flex space-x-2">
+                                    <div class="w-3 h-3 bg-red-500 rounded-full"></div>
+                                    <div class="w-3 h-3 bg-yellow-500 rounded-full"></div>
+                                    <div class="w-3 h-3 bg-green-500 rounded-full"></div>
+                                </div>
+                                <div class="ml-4 text-gray-400 text-xs font-mono">Code Generation with Claude</div>
+                            </div>
+                            <div class="p-6 space-y-4 font-mono text-sm">
+                                <div>
+                                    <div class="text-blue-400 mb-2">You:</div>
+                                    <div class="text-gray-300 bg-gray-800 p-3 rounded">"Generate a Product controller with CRUD operations using Noundry.Tuxedo"</div>
+                                </div>
+                                <div>
+                                    <div class="text-green-400 mb-2">Claude:</div>
+                                    <div class="text-gray-300 bg-gray-800 p-3 rounded text-xs overflow-x-auto">
+<pre class="text-gray-300"><span class="text-purple-400">public class</span> <span class="text-blue-400">ProductController</span>
+{
+    <span class="text-purple-400">private readonly</span> <span class="text-blue-400">IDbConnection</span> _db;
+
+    <span class="text-green-400">[HttpGet]</span>
+    <span class="text-purple-400">public async</span> Task&lt;IEnumerable&lt;Product&gt;&gt;
+    <span class="text-blue-400">GetAll</span>()
+    {
+        <span class="text-purple-400">return await</span> _db.GetAllAsync&lt;Product&gt;();
+    }
+}</pre>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="text-center mt-8">
+                            <a href="https://github.com/noundry/noundry-mcp" target="_blank" class="inline-flex items-center px-6 py-3 bg-purple-600 hover:bg-purple-700 text-white font-semibold rounded-lg transition-colors">
+                                <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
+                                    <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                                </svg>
+                                Learn More About NoundryMCP
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
