updates to index

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             '✨ Test data ready for development!',
                             '',
                             '# Noundry Jobs: Schedule Background Tasks',
-                            '$ njobs create DailyBackup backup.csx \"0 2 * * *\"',
+                            '$ njobs create DailyBackup backup.csx &quot;0 2 * * *&quot;',
                             '✓ Created scheduled job: DailyBackup',
                             '✓ Cron: 0 2 * * * (Daily at 2:00 AM)',
                             '$ njobs list',
