--- a/index.html
+++ b/index.html
@@ -162,47 +162,65 @@
                     </div>
                     <div class="font-mono text-sm overflow-y-auto flex-1" x-data="{
                         currentStep: 0,
-                        steps: [
-                            '# Slurp: CSV to Database Ingestion',
-                            '$ slurp customers.csv --provider postgres --connection $DB_URL',
-                            '✓ Analyzing CSV structure...',
-                            '✓ Detected schema: 5 columns, 10,000 rows',
-                            '⚡ Ingesting at 125,000 rows/sec',
-                            '✅ Completed: 10,000 rows in 0.08 seconds',
-                            '',
-                            '# Cufflink: Test Data Generation',
-                            '$ cufflink generate --table Products --rows 500 --seed 42',
-                            '✓ Generated 500 realistic product records',
-                            '✓ Maintaining FK relationships automatically',
-                            '✨ Test data ready for development!',
-                            '',
-                            '# Noundry Jobs: Schedule Background Tasks',
-                            '$ njobs create DailyBackup backup.csx &quot;0 2 * * *&quot;',
-                            '✓ Created scheduled job: DailyBackup',
-                            '✓ Cron: 0 2 * * * (Daily at 2:00 AM)',
-                            '$ njobs list',
-                            '✓ DailyBackup - Active - Next run: 2:00 AM',
-                            '',
-                            '# NDC: Multi-Cloud Deployment',
-                            '$ ndc create aws --name MyApi',
-                            '✓ Created Aspire project structure',
-                            '✓ Generated Terraform configs for AWS',
-                            '$ ndc deploy --provider aws',
-                            '🚀 Deploying to AWS App Runner...',
-                            '✅ Deployment successful!',
-                            '🌐 URL: https://myapi.us-west-2.awsapprunner.com'
-                        ]
+                        demos: [
+                            // Demo 1: Slurp
+                            [
+                                '# Slurp: CSV to Database Ingestion',
+                                '$ slurp customers.csv --provider postgres --connection $DB_URL',
+                                '✓ Analyzing CSV structure...',
+                                '✓ Detected schema: 5 columns, 10,000 rows',
+                                '⚡ Ingesting at 125,000 rows/sec',
+                                '✅ Completed: 10,000 rows in 0.08 seconds'
+                            ],
+                            // Demo 2: Cufflink
+                            [
+                                '# Cufflink: Test Data Generation',
+                                '$ cufflink generate --table Products --rows 500 --seed 42',
+                                '✓ Generated 500 realistic product records',
+                                '✓ Maintaining FK relationships automatically',
+                                '✨ Test data ready for development!'
+                            ],
+                            // Demo 3: Noundry Jobs
+                            [
+                                '# Noundry Jobs: Schedule Background Tasks',
+                                '$ njobs create DailyBackup backup.csx &quot;0 2 * * *&quot;',
+                                '✓ Created scheduled job: DailyBackup',
+                                '✓ Cron: 0 2 * * * (Daily at 2:00 AM)',
+                                '$ njobs list',
+                                '✓ DailyBackup - Active - Next run: 2:00 AM'
+                            ],
+                            // Demo 4: NDC
+                            [
+                                '# NDC: Multi-Cloud Deployment',
+                                '$ ndc create aws --name MyApi',
+                                '✓ Created Aspire project structure',
+                                '✓ Generated Terraform configs for AWS',
+                                '$ ndc deploy --provider aws',
+                                '🚀 Deploying to AWS App Runner...',
+                                '✅ Deployment successful!',
+                                '🌐 URL: https://myapi.us-west-2.awsapprunner.com'
+                            ]
+                        ],
+                        currentDemo: 0,
+                        currentDemoStep: 0,
+                        get currentSteps() {
+                            return this.demos[this.currentDemo];
+                        }
                     }" x-init="
                         setInterval(() => {
-                            if (currentStep < steps.length - 1) {
-                                currentStep++;
+                            if (currentDemoStep < currentSteps.length - 1) {
+                                currentDemoStep++;
                             } else {
-                                currentStep = 0;
+                                // Move to next demo, clear screen
+                                setTimeout(() => {
+                                    currentDemo = (currentDemo + 1) % demos.length;
+                                    currentDemoStep = 0;
+                                }, 1500);
                             }
-                        }, 1800)
+                        }, 1200)
                     ">
-                        <template x-for="(step, index) in steps" :key="index">
-                            <div x-show="index <= currentStep"
+                        <template x-for="(step, index) in currentSteps" :key="index">
+                            <div x-show="index <= currentDemoStep"
                                  x-transition:enter="transition ease-out duration-300"
                                  x-transition:enter-start="opacity-0 transform translate-y-2"
                                  x-transition:enter-end="opacity-100 transform translate-y-0"
@@ -216,7 +234,7 @@
                                           'text-yellow-400': step.startsWith('⚡'),
                                           'text-gray-300': !step.startsWith('#') && !step.startsWith('$') && !step.startsWith('✅') && !step.startsWith('✓') && !step.startsWith('✨') && !step.startsWith('🚀') && !step.startsWith('🌐') && !step.startsWith('⚡') && step !== ''
                                       }"></span>
-                                <span x-show="index === currentStep && step.startsWith('$')" class="animate-pulse text-accent-500">|</span>
+                                <span x-show="index === currentDemoStep && step.startsWith('$')" class="animate-pulse text-accent-500">|</span>
                             </div>
                         </template>
                     </div>
