--- a/docs.html
+++ b/docs.html
@@ -235,6 +235,17 @@
                             </button>
                         </div>
                     </div>
+
+                    <div class="mb-6">
+                        <h3 class="text-sm font-semibold text-gray-500 dark:text-gray-400 uppercase tracking-wider mb-3">AI & MCP</h3>
+                        <div class="space-y-1">
+                            <button @click="activeComponent = 'mcp'"
+                                    :class="activeComponent === 'mcp' ? 'text-primary-600 dark:text-primary-400 bg-primary-50 dark:bg-primary-900/20' : 'text-gray-700 dark:text-gray-300 hover:text-primary-600 dark:hover:text-primary-400'"
+                                    class="w-full text-left px-3 py-2 rounded-lg text-sm transition-colors">
+                                🤖 NoundryMCP
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -3541,6 +3552,179 @@
                             <li>• Public or partner APIs</li>
                         </ul>
                     </div>
+                </div>
+            </div>
+
+            <!-- NoundryMCP -->
+            <div x-show="activeComponent === 'mcp'" class="max-w-4xl">
+                <h1 class="text-4xl font-bold text-gray-900 dark:text-white mb-6">NoundryMCP</h1>
+                <p class="text-xl text-gray-600 dark:text-gray-300 mb-8">
+                    Model Context Protocol (MCP) server providing AI assistants with access to Noundry documentation, code examples, and project scaffolding capabilities.
+                </p>
+
+                <div class="bg-blue-50 dark:bg-blue-900/20 border border-blue-200 dark:border-blue-800 rounded-lg p-6 mb-8">
+                    <h3 class="text-lg font-semibold text-blue-900 dark:text-blue-100 mb-2">What is NoundryMCP?</h3>
+                    <p class="text-blue-800 dark:text-blue-200">
+                        NoundryMCP is a hosted MCP server that integrates with Claude Desktop and other MCP-compatible AI clients. It gives AI assistants the ability to search Noundry documentation, retrieve code examples, and help you scaffold new Noundry projects directly from your conversations.
+                    </p>
+                </div>
+
+                <div class="bg-gray-50 dark:bg-gray-800 rounded-xl p-6 mb-8">
+                    <h2 class="text-2xl font-bold text-gray-900 dark:text-white mb-4">Quick Setup with Claude Desktop</h2>
+
+                    <div class="mb-6">
+                        <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-3">1. Locate Your Claude Desktop Config File</h3>
+                        <p class="text-gray-600 dark:text-gray-300 mb-3">The configuration file location depends on your operating system:</p>
+
+                        <div class="space-y-3">
+                            <div class="bg-white dark:bg-gray-900 rounded-lg p-4">
+                                <div class="font-semibold text-gray-900 dark:text-white mb-2">Windows</div>
+                                <code class="block bg-gray-100 dark:bg-gray-800 p-3 rounded text-sm font-mono text-gray-800 dark:text-gray-200">
+                                    %APPDATA%\Claude\claude_desktop_config.json
+                                </code>
+                            </div>
+
+                            <div class="bg-white dark:bg-gray-900 rounded-lg p-4">
+                                <div class="font-semibold text-gray-900 dark:text-white mb-2">macOS</div>
+                                <code class="block bg-gray-100 dark:bg-gray-800 p-3 rounded text-sm font-mono text-gray-800 dark:text-gray-200">
+                                    ~/Library/Application Support/Claude/claude_desktop_config.json
+                                </code>
+                            </div>
+
+                            <div class="bg-white dark:bg-gray-900 rounded-lg p-4">
+                                <div class="font-semibold text-gray-900 dark:text-white mb-2">Linux</div>
+                                <code class="block bg-gray-100 dark:bg-gray-800 p-3 rounded text-sm font-mono text-gray-800 dark:text-gray-200">
+                                    ~/.config/Claude/claude_desktop_config.json
+                                </code>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mb-6">
+                        <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-3">2. Add NoundryMCP Configuration</h3>
+                        <p class="text-gray-600 dark:text-gray-300 mb-3">Open the config file and add the NoundryMCP server:</p>
+
+                        <div class="bg-gray-900 dark:bg-black rounded-lg p-6 overflow-x-auto">
+                            <pre class="text-sm font-mono text-gray-300"><code>{
+  "mcpServers": {
+    "noundry": {
+      "url": "https://mcp.noundry.com"
+    }
+  }
+}</code></pre>
+                        </div>
+
+                        <div class="mt-3 bg-yellow-50 dark:bg-yellow-900/20 border border-yellow-200 dark:border-yellow-800 rounded-lg p-4">
+                            <p class="text-sm text-yellow-800 dark:text-yellow-200">
+                                <strong>Note:</strong> If you already have other MCP servers configured, just add the "noundry" entry to your existing "mcpServers" object.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="mb-6">
+                        <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-3">3. Restart Claude Desktop</h3>
+                        <p class="text-gray-600 dark:text-gray-300">
+                            Close and reopen Claude Desktop for the changes to take effect. You should now see NoundryMCP listed in your available tools.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="bg-gray-50 dark:bg-gray-800 rounded-xl p-6 mb-8">
+                    <h2 class="text-2xl font-bold text-gray-900 dark:text-white mb-4">Available Tools</h2>
+
+                    <div class="space-y-4">
+                        <div class="bg-white dark:bg-gray-900 rounded-lg p-4">
+                            <div class="flex items-start">
+                                <div class="w-12 h-12 bg-primary-100 dark:bg-primary-900 rounded-lg flex items-center justify-center mr-4 flex-shrink-0">
+                                    <svg class="w-6 h-6 text-primary-600 dark:text-primary-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/>
+                                    </svg>
+                                </div>
+                                <div class="flex-1">
+                                    <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-2">search_documentation</h3>
+                                    <p class="text-gray-600 dark:text-gray-300 mb-2">Search across all Noundry documentation including libraries, components, CLI tools, and guides.</p>
+                                    <code class="text-sm text-primary-600 dark:text-primary-400">Example: "How do I use Noundry.Guardian?"</code>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="bg-white dark:bg-gray-900 rounded-lg p-4">
+                            <div class="flex items-start">
+                                <div class="w-12 h-12 bg-accent-100 dark:bg-accent-900 rounded-lg flex items-center justify-center mr-4 flex-shrink-0">
+                                    <svg class="w-6 h-6 text-accent-600 dark:text-accent-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"/>
+                                    </svg>
+                                </div>
+                                <div class="flex-1">
+                                    <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-2">get_code_examples</h3>
+                                    <p class="text-gray-600 dark:text-gray-300 mb-2">Retrieve code examples and snippets for specific Noundry libraries and components.</p>
+                                    <code class="text-sm text-accent-600 dark:text-accent-400">Example: "Show me Sod validation examples"</code>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="bg-white dark:bg-gray-900 rounded-lg p-4">
+                            <div class="flex items-start">
+                                <div class="w-12 h-12 bg-orange-100 dark:bg-orange-900 rounded-lg flex items-center justify-center mr-4 flex-shrink-0">
+                                    <svg class="w-6 h-6 text-orange-600 dark:text-orange-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
+                                    </svg>
+                                </div>
+                                <div class="flex-1">
+                                    <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-2">scaffold_project</h3>
+                                    <p class="text-gray-600 dark:text-gray-300 mb-2">Generate project templates and scaffolding commands for new Noundry applications.</p>
+                                    <code class="text-sm text-orange-600 dark:text-orange-400">Example: "Create a new Blazor app with Noundry"</code>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="bg-white dark:bg-gray-900 rounded-lg p-4">
+                            <div class="flex items-start">
+                                <div class="w-12 h-12 bg-purple-100 dark:bg-purple-900 rounded-lg flex items-center justify-center mr-4 flex-shrink-0">
+                                    <svg class="w-6 h-6 text-purple-600 dark:text-purple-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                                    </svg>
+                                </div>
+                                <div class="flex-1">
+                                    <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-2">list_libraries</h3>
+                                    <p class="text-gray-600 dark:text-gray-300 mb-2">Get a comprehensive list of all available Noundry libraries with descriptions.</p>
+                                    <code class="text-sm text-purple-600 dark:text-purple-400">Example: "What libraries does Noundry offer?"</code>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="bg-gray-50 dark:bg-gray-800 rounded-xl p-6 mb-8">
+                    <h2 class="text-2xl font-bold text-gray-900 dark:text-white mb-4">Usage Examples</h2>
+
+                    <div class="space-y-4">
+                        <div class="bg-white dark:bg-gray-900 rounded-lg p-4 border-l-4 border-primary-500">
+                            <p class="text-gray-600 dark:text-gray-300 mb-2"><strong>You:</strong> "How do I add input validation to my ASP.NET Core app?"</p>
+                            <p class="text-gray-600 dark:text-gray-300"><strong>Claude:</strong> Searches documentation and provides Noundry.Sod validation examples with setup instructions.</p>
+                        </div>
+
+                        <div class="bg-white dark:bg-gray-900 rounded-lg p-4 border-l-4 border-accent-500">
+                            <p class="text-gray-600 dark:text-gray-300 mb-2"><strong>You:</strong> "Create a new web API project with Noundry"</p>
+                            <p class="text-gray-600 dark:text-gray-300"><strong>Claude:</strong> Provides the commands to install templates and scaffold a new API project with authentication.</p>
+                        </div>
+
+                        <div class="bg-white dark:bg-gray-900 rounded-lg p-4 border-l-4 border-orange-500">
+                            <p class="text-gray-600 dark:text-gray-300 mb-2"><strong>You:</strong> "Show me how to use Noundry.DotEnvX for environment variables"</p>
+                            <p class="text-gray-600 dark:text-gray-300"><strong>Claude:</strong> Retrieves code examples showing configuration, encryption, and validation setup.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="bg-green-50 dark:bg-green-900/20 border border-green-200 dark:border-green-800 rounded-lg p-6">
+                    <h3 class="text-lg font-semibold text-green-900 dark:text-green-100 mb-2">Benefits</h3>
+                    <ul class="space-y-2 text-green-800 dark:text-green-200">
+                        <li>• Get instant answers about Noundry features and usage</li>
+                        <li>• Access code examples without leaving your conversation</li>
+                        <li>• Generate project scaffolding commands on the fly</li>
+                        <li>• Learn best practices from AI-powered recommendations</li>
+                        <li>• No API keys or authentication required</li>
+                    </ul>
                 </div>
             </div>
         </div>
