--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                             </div>
                             <div>
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2">Web API Blueprint</h3>
-                                <p class="text-gray-600 dark:text-gray-300">Complete REST API with authentication, validation, logging, and database integration. Includes Swagger documentation and health checks.</p>
+                                <p class="text-gray-600 dark:text-gray-300">Complete REST API with authentication, validation, logging, and database integration. Includes open API documentation and health checks.</p>
                             </div>
                         </div>
                         <div class="flex items-start space-x-4">
@@ -1334,7 +1334,7 @@
                     </div>
                     <h3 class="text-3xl font-bold text-gray-900 dark:text-white mb-4">NoundryMCP - Model Context Protocol Server</h3>
                     <p class="text-lg text-gray-600 dark:text-gray-300 max-w-3xl mx-auto">
-                        Integrate Noundry platform directly into Claude Desktop via MCP. Get instant access to templates, documentation, and code generation right from your AI assistant.
+                        Integrate Noundry platform directly into Claude Desktop, Codex, Cursor CLIs via MCP. Get instant access to templates, documentation, and code generation right from your AI assistant.
                     </p>
                 </div>
 
@@ -1368,7 +1368,7 @@
                                 </svg>
                                 Hosted Service - No Local Setup
                             </h4>
-                            <p class="text-gray-600 dark:text-gray-300">NoundryMCP is a hosted service accessible via Claude Desktop. No local installation or configuration required - just connect and start building.</p>
+                            <p class="text-gray-600 dark:text-gray-300">NoundryMCP is a hosted service accessible locally via any coding CLI. No local installation or configuration required - just connect and start building.</p>
                         </div>
                     </div>
 
@@ -1439,7 +1439,7 @@
                         </div>
 
                         <div class="text-center mt-8">
-                            <a href="https://github.com/noundry/noundry-mcp" target="_blank" class="inline-flex items-center px-6 py-3 bg-purple-600 hover:bg-purple-700 text-white font-semibold rounded-lg transition-colors">
+                            <a href="https://noundry.com/andy-ai#mcp"  class="inline-flex items-center px-6 py-3 bg-purple-600 hover:bg-purple-700 text-white font-semibold rounded-lg transition-colors">
                                 <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
                                     <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                                 </svg>
