--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noundry - Modern dotnet Development Platform</title>
+    <title>Noundry - Modern C# Development Platform</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script>
@@ -136,10 +136,10 @@
             <div class="grid lg:grid-cols-2 gap-12 items-center">
                 <div>
                     <h1 class="text-5xl lg:text-6xl font-bold text-gray-900 dark:text-white mb-6 leading-tight">
-                        Modern <span class="text-primary-600 dark:text-primary-400">.net</span> Development Platform
+                        Modern <span class="text-primary-600 dark:text-primary-400">C#</span> Development Platform
                     </h1>
                     <p class="text-xl text-gray-600 dark:text-gray-300 mb-8 leading-relaxed">
-                        Build faster, deploy smarter, and scale effortlessly with Noundry's comprehensive suite of .NET libraries, blocks, blueprints, and AI-powered CLI tools.
+                        Build faster, deploy smarter, and scale effortlessly with Noundry's comprehensive suite of C# libraries, blocks, blueprints, and AI-powered CLI tools.
                     </p>
                     <div class="flex flex-col sm:flex-row gap-4">
                         <a href="pricing.html" class="bg-primary-600 hover:bg-primary-700 text-white px-8 py-4 rounded-lg text-lg font-semibold transition-colors text-center">
@@ -2094,7 +2094,7 @@
                             <img x-show="!darkMode" src="assets/wh-nd-logo-sm.png" alt="Noundry" class="h-8 w-auto">
                     </div>
                     <p class="text-gray-300 mb-6 max-w-md">
-                        The modern .NET development platform that accelerates your journey from idea to production with intelligent tools, reusable components, and AI-powered assistance.
+                        The modern C# development platform that accelerates your journey from idea to production with intelligent tools, reusable components, and AI-powered assistance.
                     </p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white transition-colors">
