--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
     <section class="py-20 bg-white dark:bg-gray-900">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
-                <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">Everything You Need to Build Modern .NET Apps</h2>
+                <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">Everything You Need to Build Modern C# Apps</h2>
                 <p class="text-xl text-gray-600 dark:text-gray-300 max-w-3xl mx-auto">
-                    From core libraries to AI-powered development tools, Noundry provides a complete ecosystem for .NET developers.
+                    From core libraries to AI-powered development tools, Noundry provides a complete ecosystem for C# developers.
                 </p>
             </div>
             <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
