--- a/index.html
+++ b/index.html
@@ -455,6 +455,33 @@
                         </code>
                     </div>
                 </div>
+
+                <!-- Deployment -->
+                <div class="bg-white dark:bg-gray-900 rounded-xl p-8 shadow-lg">
+                    <div class="flex items-center mb-6">
+                        <div class="w-12 h-12 bg-cyan-100 dark:bg-cyan-900 rounded-lg flex items-center justify-center mr-4">
+                            <svg class="w-6 h-6 text-cyan-600 dark:text-cyan-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"></path>
+                            </svg>
+                        </div>
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Deployment</h3>
+                    </div>
+                    <div class="space-y-4">
+                        <div class="border-l-4 border-cyan-500 pl-4">
+                            <h4 class="font-semibold text-gray-900 dark:text-white"><a href="engine.html" class="hover:text-cyan-600 dark:hover:text-cyan-400 transition-colors">Noundry Engine CLI (ndng)</a></h4>
+                            <p class="text-gray-600 dark:text-gray-300 text-sm">Fast .NET deployment automation for Linux servers. Deploy .NET 9.0+ applications with a single command - server initialization, SSL certificates, database setup, and more.</p>
+                        </div>
+                        <div class="border-l-4 border-cyan-500 pl-4">
+                            <h4 class="font-semibold text-gray-900 dark:text-white"><a href="engine.html" class="hover:text-cyan-600 dark:hover:text-cyan-400 transition-colors">Noundry Engine Platform</a></h4>
+                            <p class="text-gray-600 dark:text-gray-300 text-sm">Free *.noundry.app test domains with automatic DNS management, SSL certificates, and integrated deployment workflows for rapid testing and staging.</p>
+                        </div>
+                    </div>
+                    <div class="mt-6 p-4 bg-gray-50 dark:bg-gray-800 rounded-lg">
+                        <code class="text-sm font-mono text-gray-800 dark:text-gray-200">
+                            dotnet tool install --global Noundry.Engine.Cli
+                        </code>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
