--- a/index.html
+++ b/index.html
@@ -404,14 +404,6 @@
                             <p class="text-gray-600 dark:text-gray-300 text-sm">Code and CLI based database schema synchronization</p>
                         </div>
                         <div class="border-l-4 border-purple-500 pl-4">
-                            <h4 class="font-semibold text-gray-900 dark:text-white"><a href="cufflink.html" class="hover:text-purple-600 dark:hover:text-purple-400 transition-colors">Noundry.Tuxedo.Cufflink</a></h4>
-                            <p class="text-gray-600 dark:text-gray-300 text-sm">Fake data generation with automatic FK/PK relationship detection</p>
-                        </div>
-                        <div class="border-l-4 border-purple-500 pl-4">
-                            <h4 class="font-semibold text-gray-900 dark:text-white"><a href="slurp.html" class="hover:text-purple-600 dark:hover:text-purple-400 transition-colors">Noundry.Slurp</a></h4>
-                            <p class="text-gray-600 dark:text-gray-300 text-sm">High-performance CSV to database ingestion with smart schema inference</p>
-                        </div>
-                        <div class="border-l-4 border-purple-500 pl-4">
                             <h4 class="font-semibold text-gray-900 dark:text-white"><a href="connector.html" class="hover:text-purple-600 dark:hover:text-purple-400 transition-colors">Noundry.Connector</a></h4>
                             <p class="text-gray-600 dark:text-gray-300 text-sm">Powerful, flexible Enterprise API Client library built on Refit with automatic authentication, strongly-typed HTTP clients, and full CRUD operations.</p>
                         </div>
@@ -421,8 +413,6 @@
                         <code class="text-sm font-mono text-gray-800 dark:text-gray-200">
                             dotnet add package Noundry.Tuxedo<br>
                             dotnet add package Noundry.Tuxedo.Bowtie<br>
-                            dotnet add package Noundry.Tuxedo.Cufflink<br>
-                            dotnet add package Noundry.Slurp<br>
                             dotnet add package Noundry.Connector
                         </code>
                     </div>
@@ -479,6 +469,34 @@
                     <div class="mt-6 p-4 bg-gray-50 dark:bg-gray-800 rounded-lg">
                         <code class="text-sm font-mono text-gray-800 dark:text-gray-200">
                             dotnet tool install --global Noundry.Engine.Cli
+                        </code>
+                    </div>
+                </div>
+
+                <!-- Data Management -->
+                <div class="bg-white dark:bg-gray-900 rounded-xl p-8 shadow-lg">
+                    <div class="flex items-center mb-6">
+                        <div class="w-12 h-12 bg-teal-100 dark:bg-teal-900 rounded-lg flex items-center justify-center mr-4">
+                            <svg class="w-6 h-6 text-teal-600 dark:text-teal-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
+                            </svg>
+                        </div>
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Data Management</h3>
+                    </div>
+                    <div class="space-y-4">
+                        <div class="border-l-4 border-teal-500 pl-4">
+                            <h4 class="font-semibold text-gray-900 dark:text-white"><a href="slurp.html" class="hover:text-teal-600 dark:hover:text-teal-400 transition-colors">Noundry.Slurp</a></h4>
+                            <p class="text-gray-600 dark:text-gray-300 text-sm">High-performance CSV to database ingestion with smart schema inference</p>
+                        </div>
+                        <div class="border-l-4 border-teal-500 pl-4">
+                            <h4 class="font-semibold text-gray-900 dark:text-white"><a href="cufflink.html" class="hover:text-teal-600 dark:hover:text-teal-400 transition-colors">Noundry.Tuxedo.Cufflink</a></h4>
+                            <p class="text-gray-600 dark:text-gray-300 text-sm">Fake data generation with automatic FK/PK relationship detection</p>
+                        </div>
+                    </div>
+                    <div class="mt-6 p-4 bg-gray-50 dark:bg-gray-800 rounded-lg">
+                        <code class="text-sm font-mono text-gray-800 dark:text-gray-200">
+                            dotnet add package Noundry.Slurp<br>
+                            dotnet add package Noundry.Tuxedo.Cufflink
                         </code>
                     </div>
                 </div>
